resized h1 font size to fix misalignment on smaller screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 body	{
 	font-family: 'Lato', sans-serif;
 	color: #333;
-	font-weight: 400;
+	font-weight: 300;
 }
 
 a	{
@@ -29,8 +29,8 @@ hr {
 }
 
 .title-super	{
-	font-size: 80px;
-	margin-top: 60px;
+  font-size: 60px;
+	margin-top: 50px;
 }
 
 .featured img {
